# DistributedHomeSensing

./: CMakeLists.txt  README.md
scripts/led_test/: led_test.ino
scripts/potentiometer_test/: potentiometer_test.ino
scripts/thermistor_test/: thermistor_test.ino
